--- a/portfolio.html
+++ b/portfolio.html
@@ -141,10 +141,40 @@
 </section>
     </main>
     <footer class="footer">
-        <div class="container">
-        <a class="logo-footer list link" href="./index.html">Web<span class="logo-footer-color">Studio</span></a>
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
-            solutions.</p>
+           <div class="footer-wrapper">
+            <div class="footer-wrap">
+            <a class="logo-footer list link" href="./index.html">Web<span class="logo-footer-color">Studio</span></a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            </div>
+            <div class="footer-soc-wrap">
+                <h3 class="soc-title">Social media</h3>
+                <ul class="footer-soc-list list">
+                    <li class="footer-soc-item">
+                        <a class="footer-soc-link link" href="">
+                        <svg class="footer-soc-icon" width="24" heighy="24">
+                            <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a></li>
+                    <li class="footer-soc-item">
+                        <a class="footer-soc-link link" href="">
+                            <svg class="footer-soc-icon" width="24" heighy="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                    </a></li>
+                    <li class="footer-soc-item">
+                        <a class="footer-soc-link link" href="">
+                            <svg class="footer-soc-icon" width="24" heighy="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                    </a></li>
+                    <li class="footer-soc-item">
+                        <a class="footer-soc-link link" href="">
+                            <svg class="footer-soc-icon" width="24" heighy="24">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                    </a></li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
