--- a/index.html
+++ b/index.html
@@ -251,37 +251,37 @@
                     <li class="cust-item">
                         <a class="cust-link link" href="">
                             <svg class="cust-icon" width="104" height="56">
-                                <use href="/images/icons.svg#icon-Logo-1"></use>
+                                <use href="./images/icons.svg#icon-Logo-1"></use>
                             </svg>
                         </a></li>
                         <li class="cust-item">
                             <a class="cust-link link" href="">
                             <svg class="cust-icon">
-                             <use href="/images/icons.svg#icon-Logo-2"></use>
+                             <use href="./images/icons.svg#icon-Logo-2"></use>
                             </svg>
                             </a></li>
                             <li class="cust-item">
                             <a class="cust-link link" href="">
                             <svg class="cust-icon" width="104" height="56">
-                            <use href="/images/icons.svg#icon-Logo-3"></use>
+                            <use href="./images/icons.svg#icon-Logo-3"></use>
                             </svg>
                             </a></li>
                             <li class="cust-item">
                             <a class="cust-link link" href="">
                             <svg class="cust-icon" width="104" height="56">
-                            <use href="/images/icons.svg#icon-Logo-4"></use>
+                            <use href="./images/icons.svg#icon-Logo-4"></use>
                             </svg>
                             </a></li> 
                             <li class="cust-item">
                             <a class="cust-link link" href="">
                             <svg class="cust-icon" width="104" height="56">
-                            <use href="/images/icons.svg#icon-Logo-5"></use>
+                            <use href="./images/icons.svg#icon-Logo-5"></use>
                             </svg>
                             </a></li>
                             <li class="cust-item">
                             <a class="cust-link link" href="">
                             <svg class="cust-icon" width="104" height="56">
-                            <use href="/images/icons.svg#icon-Logo-6"></use>
+                            <use href="./images/icons.svg#icon-Logo-6"></use>
                            </svg>
                              </a></li>
                     </a></li>            
