--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
             integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-            crossorigin="anonymous" referrerpolicy="no-referrer" />
+            crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Document</title>
 </head>
@@ -113,32 +113,32 @@
                             <ul class="team-soc-list list">
                                 <li class="team-soc-item">
                                     <a class="team-soc-link link" href="">
-                                    <svg class="team-soc-icon" width="16" heighy="16">
+                                    <svg class="team-soc-icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a></li>
                                 <li class="team-soc-item">
                                     <a class="team-soc-link link" href="">
-                                        <svg class="team-soc-icon" width="16" heighy="16">
+                                        <svg class="team-soc-icon" width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                 </a></li>
                                 <li class="team-soc-item">
                                     <a class="team-soc-link link" href="">
-                                        <svg class="team-soc-icon" width="16" heighy="16">
+                                        <svg class="team-soc-icon" width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                 </a></li>
                                 <li class="team-soc-item">
                                     <a class="team-soc-link link" href="">
-                                        <svg class="team-soc-icon" width="16" heighy="16">
+                                        <svg class="team-soc-icon" width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                 </a></li>
                             </ul>
-                    </div>
-                    </li>
-                    <li class="team-item">
+                     </div>
+                     </li>
+                     <li class="team-item">
                         <img class="img-team" src="./images/tom.jpg" alt="photo tom" width="264" height="260">
                         <div class="team-piple">
                         <h3 class="team-title">Tom Ford</h3>
@@ -146,34 +146,34 @@
                         <ul class="team-soc-list list">
                             <li class="team-soc-item">
                                 <a class="team-soc-link link" href="">
-                                <svg class="team-soc-icon" width="16" heighy="16">
+                                <svg class="team-soc-icon" width="16" height="16">
                                     <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a></li>
                             <li class="team-soc-item">
                                 <a class="team-soc-link link" href="">
-                                    <svg class="team-soc-icon" width="16" heighy="16">
+                                    <svg class="team-soc-icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                             </a></li>
                             <li class="team-soc-item">
                                 <a class="team-soc-link link" href="">
-                                    <svg class="team-soc-icon" width="16" heighy="16">
+                                    <svg class="team-soc-icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                             </a></li>
                             <li class="team-soc-item">
                                 <a class="team-soc-link link" href="">
-                                    <svg class="team-soc-icon" width="16" heighy="16">
+                                    <svg class="team-soc-icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                             </a></li>
                         </ul>
-                </div>
+                      </div>
                         
                         
-                    </li>
-                    <li class="team-item">
+                     </li>
+                     <li class="team-item">
                         <img class="img-team" src="./images/camila.jpg" alt="photo camila" width="264" height="260">
                         <div class="team-piple">
                             <h3 class="team-title">Camila Garcia</h3>
@@ -181,66 +181,65 @@
                             <ul class="team-soc-list list">
                                 <li class="team-soc-item">
                                     <a class="team-soc-link link" href="">
-                                    <svg class="team-soc-icon" width="16" heighy="16">
+                                    <svg class="team-soc-icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a></li>
                                 <li class="team-soc-item">
                                     <a class="team-soc-link link" href="">
-                                        <svg class="team-soc-icon" width="16" heighy="16">
+                                        <svg class="team-soc-icon" width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                 </a></li>
                                 <li class="team-soc-item">
                                     <a class="team-soc-link link" href="">
-                                        <svg class="team-soc-icon" width="16" heighy="16">
+                                        <svg class="team-soc-icon" width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                 </a></li>
                                 <li class="team-soc-item">
                                     <a class="team-soc-link link" href="">
-                                        <svg class="team-soc-icon" width="16" heighy="16">
+                                        <svg class="team-soc-icon" width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                 </a></li>
                             </ul>
-                    </div>
-                        <div>     
-                    </li>
-                    <li class="team-item">
+                     </div>     
+                     </li>
+                     <li class="team-item">
                         <img class="img-team" src="./images/daniel.jpg" alt="photo daniel" width="264" height="260">
-                    <div class="team-piple">
+                     <div class="team-piple">
                         <h3 class="team-title">Daniel Wilson</h3>
                         <p class="team-text">UI Designer</p>
                         <ul class="team-soc-list list">
                             <li class="team-soc-item">
                                 <a class="team-soc-link link" href="">
-                                <svg class="team-soc-icon" width="16" heighy="16">
+                                <svg class="team-soc-icon" width="16" height="16">
                                     <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a></li>
                             <li class="team-soc-item">
                                 <a class="team-soc-link link" href="">
-                                    <svg class="team-soc-icon" width="16" heighy="16">
+                                    <svg class="team-soc-icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                             </a></li>
                             <li class="team-soc-item">
                                 <a class="team-soc-link link" href="">
-                                    <svg class="team-soc-icon" width="16" heighy="16">
+                                    <svg class="team-soc-icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                             </a></li>
                             <li class="team-soc-item">
                                 <a class="team-soc-link link" href="">
-                                    <svg class="team-soc-icon" width="16" heighy="16">
+                                    <svg class="team-soc-icon" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
-                            </a></li>
+                                </a>
+                                    </li>
                         </ul>
-                </div>
-            </div>
-                    </li>
+                        </div>
+                      </li>
                 </ul>
                 </div>
             </section>
@@ -283,8 +282,7 @@
                             <svg class="cust-icon" width="104" height="56">
                             <use href="./images/icons.svg#icon-Logo-6"></use>
                            </svg>
-                             </a></li>
-                    </a></li>            
+                             </a></li>            
                 </ul>
             </div>
             </section>
@@ -300,25 +298,25 @@
                 <ul class="footer-soc-list list">
                     <li class="footer-soc-item">
                         <a class="footer-soc-link link" href="">
-                        <svg class="footer-soc-icon" width="24" heighy="24">
+                        <svg class="footer-soc-icon" width="24" height="24">
                             <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a></li>
                     <li class="footer-soc-item">
                         <a class="footer-soc-link link" href="">
-                            <svg class="footer-soc-icon" width="24" heighy="24">
+                            <svg class="footer-soc-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                     </a></li>
                     <li class="footer-soc-item">
                         <a class="footer-soc-link link" href="">
-                            <svg class="footer-soc-icon" width="24" heighy="24">
+                            <svg class="footer-soc-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                     </a></li>
                     <li class="footer-soc-item">
                         <a class="footer-soc-link link" href="">
-                            <svg class="footer-soc-icon" width="24" heighy="24">
+                            <svg class="footer-soc-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                     </a></li>
