--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
         <ul class="portfilio-list list">
             <li class="portfolio-items">
                 <a class="portfolio-img link" href="">
-                    <img class="pictures" src="./images/bankingapp.jpg" alt="banking app" width="360">
+                    <img class="portfolio-pic" src="./images/bankingapp.jpg" alt="banking app" width="360">
                     <div class="portfolio-caption">
                     <h2 class="portfilio-title">Banking App Interface Concept</h2>
                     <p class="portfilio-text">App</p>
@@ -131,9 +131,8 @@
                     <div class="portfolio-caption">
                     <h2 class="portfilio-title">Fresh Coffee</h2>
                     <p class="portfilio-text">Web Site</p>
-                    </a>
                     </div>
-                    
+                </a>
             </li>
         </ul>
     </div>
@@ -151,25 +150,25 @@
                 <ul class="footer-soc-list list">
                     <li class="footer-soc-item">
                         <a class="footer-soc-link link" href="">
-                        <svg class="footer-soc-icon" width="24" heighy="24">
+                        <svg class="footer-soc-icon" width="24" height="24">
                             <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a></li>
                     <li class="footer-soc-item">
                         <a class="footer-soc-link link" href="">
-                            <svg class="footer-soc-icon" width="24" heighy="24">
+                            <svg class="footer-soc-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                     </a></li>
                     <li class="footer-soc-item">
                         <a class="footer-soc-link link" href="">
-                            <svg class="footer-soc-icon" width="24" heighy="24">
+                            <svg class="footer-soc-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                     </a></li>
                     <li class="footer-soc-item">
                         <a class="footer-soc-link link" href="">
-                            <svg class="footer-soc-icon" width="24" heighy="24">
+                            <svg class="footer-soc-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                     </a></li>
